[project]
name = "wrime-tmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.0",
    "argparse>=1.4.0",
    "datasets>=3.2.0",
    "fugashi>=1.4.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "unidic-lite>=1.0.8",
]
